tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/exp-point-1.stderr
TOML parse error at line 1, column 18
  |
1 | exp-point-1 = 1e2.3
  |                  ^
expected newline, `#`
